# bluexkye_assingment

./: README.md  create_knowledge_base.py  fast_api.py  main.py  pyproject.toml  requirements.txt  web_crawler.py
Extracted_Data/: extracted_content.json
faiss_index/: index.faiss  index.pkl
